<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.11</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.projetLocMns</groupId>
    <artifactId>ProjetFilRougeLocMnsV3</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>ProjetFilRougeLocMnsV3</name>
    <description>Projet Thibaut Robin in progress</description>

    <!--	necessaire au deploiement-->
    <packaging>war</packaging>


    <properties>
        <java.version>11</java.version>
    </properties>


    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>


        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt</artifactId>
            <version>0.9.1</version>
        </dependency>

        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>2.3.0</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.13.1</version>
        </dependency>


        <!-- ici c'est pour les images, les transformer en bytes, voir (ficheir service) -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.9.0</version>
        </dependency>


        <!--permet d'uiliser un ampper pour les dto-->
        <dependency>
            <groupId>org.modelmapper</groupId>
            <artifactId>modelmapper</artifactId>
            <version>2.3.5</version>
        </dependency>


        <!--		les deux depednances ci dessous poru taiter des fichiers multiplart pour la commande :-->
        <!--		<dependency>-->
        <!--			<groupId>org.springframework.boot</groupId>-->
        <!--			<artifactId>spring-boot-starter-web</artifactId>-->
        <!--		</dependency>-->

        <!--		<dependency>-->
        <!--			<groupId>com.fasterxml.jackson.core</groupId>-->
        <!--			<artifactId>jackson-databind</artifactId>-->
        <!--		</dependency>-->


<!--        Ici pour tomcat changement version-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-tomcat</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>jakarta.enterprise</groupId>
            <artifactId>jakarta.enterprise.cdi-api</artifactId>
            <version>4.0.1</version>
        </dependency>

    </dependencies>

    <profiles>

        <profile>
            <id>dev</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <adresse_serveur_bdd>localhost:3306</adresse_serveur_bdd>
                <nom_bdd>loc_mns</nom_bdd>
                <utilisateur_bdd>root</utilisateur_bdd>
                <mot_de_passe_bdd></mot_de_passe_bdd>
                <ddl_auto>create</ddl_auto>
                <nom_fichier_sql>mysql</nom_fichier_sql>
                <initialisation_donnee_bdd>true</initialisation_donnee_bdd>
                <mode_initialisation_donnee_bdd>always</mode_initialisation_donnee_bdd>
                <dossier_upload>root</dossier_upload>

                <skipUnitTest>false</skipUnitTest>

                <!-- voici notre varibale jwt_secret -->
                <jwt_secret>azerty</jwt_secret>
            </properties>
        </profile>

        <profile>
            <id>prod</id>
            <properties>
                <adresse_serveur_bdd>172.18.0.2:3306</adresse_serveur_bdd>
                <nom_bdd>loc_mns</nom_bdd>
                <utilisateur_bdd>root</utilisateur_bdd>
                <mot_de_passe_bdd>root</mot_de_passe_bdd>
                <ddl_auto>create</ddl_auto>
                <nom_fichier_sql>mysql</nom_fichier_sql>
                <initialisation_donnee_bdd>true</initialisation_donnee_bdd>
                <mode_initialisation_donnee_bdd>always</mode_initialisation_donnee_bdd>
                <dossier_upload>/uploads</dossier_upload>

                <skipUnitTest>true</skipUnitTest>

                <jwt_secret>Info à définir dans le fichier settings.xml du serveur</jwt_secret>
            </properties>
        </profile>

    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>


            <!--plugin nécessaire en dessous pour le déploiement-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M6</version>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.1.0</version>
            </plugin>
        </plugins>
    </build>

</project>
